--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="title_static_horizontal_bias">정적 압력 분포 가로 편향</string>
     <string name="description_elapsed_time">소요 시간</string>
     <string name="description_measure_date">측정 일자</string>
+    <string name="description_please_be_ready">양 발로 바르게 선 다음 시작 버튼을 눌러 주세요</string>
 </resources>
