--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="description_elapsed_time">소요 시간</string>
     <string name="description_measure_date">측정 일자</string>
     <string name="description_please_be_ready">양 발로 바르게 선 다음 시작 버튼을 눌러 주세요</string>
+    <string name="button_start">시작</string>
+    <string name="button_finish">종료</string>
+
 </resources>
