--- a/data/src/main/res/values/strings.xml
+++ b/data/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
 <resources>
 
     <string name="fail_bt_off">블루투스가 비활성화되어 있습니다. 블루투스를 켜 주세요.</string>
-    <string name="fail_not_paired">기기가 페어링되지 않았습니다. 최초 페어링 후 다시 시도해 주시기 바랍니다.</string>
-    <string name="fail_already_connected">기기가 이미 연결되어 있습니다.</string>
+    <string name="fail_not_paired">신발과 페어링되지 않았습니다. 최초 페어링 후 다시 시도해 주시기 바랍니다.</string>
+    <string name="fail_already_connected">신발이 이미 연결되어 있습니다.</string>
     <string name="fail_disconnected">신발과의 연결이 끊어졌습니다.</string>
 
 </resources>
