--- a/data/src/main/res/values/strings.xml
+++ b/data/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
 
     <string name="fail_bt_off">블루투스가 비활성화되어 있습니다. 블루투스를 켜 주세요.</string>
     <string name="fail_not_paired">기기와 페어링되지 않았습니다. 최초 페어링 후 다시 시도해 주시기 바랍니다.</string>
-    <string name="fail_already_connected">기기가 이미 연결되어 있습니다.</string>
-    <string name="fail_disconnected">기기와의 연결이 끊어졌습니다.</string>
+    <string name="fail_already_connected">기기와의 연결이 이미 진행중입니다.</string>
+    <string name="fail_disconnected">기기와의 연결에 실패하였습니다.</string>
+    <string name="fail_device_not_all_connected">기기를 모두 연결하고 다시 시도해 주세요.</string>
 
 </resources>
