--- a/data/src/main/res/values/strings.xml
+++ b/data/src/main/res/values/strings.xml
@@ -25,5 +25,11 @@
     <string name="fail_already_connected">기기와의 연결이 이미 진행중입니다.</string>
     <string name="fail_disconnected">기기와의 연결에 실패하였습니다.</string>
     <string name="fail_device_not_all_connected">기기를 모두 연결하고 다시 시도해 주세요.</string>
+    <string name="fail_to_finish_recording">기록을 종료하는 데에 실패하였습니다.</string>
+    <string name="fail_to_start_recording">기록을 시작하는 데에 실패하였습니다.</string>
+    <string name="fail_no_record_secured">기록을 저장하지 못 하였습니다.</string>
+
+    <string name="notify_report_done">보고서 생성이 완료되었습니다.</string>
+    <string name="fail_report_done">보고서 생성에 실패하였습니다.</string>
 
 </resources>
