--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,8 @@
     <string name="description_walk_diagnosis">일정한 속도로 걸어 주세요.</string>
     <string name="description_keep_next_is_walk">계속 버튼을 누른 뒤 천천히 걸어 주세요.</string>
     <string name="description_diagnosis_done">검사가 종료되었습니다. 감사합니다.</string>
+    <string name="notify_report_deleted">보고서가 삭제되었습니다.</string>
+    <string name="fail_report_delete_failed">보고서를 삭제하지 못 하였습니다.</string>
+    <string name="description_no_reports">보고서가 없습니다. 진단 후 이곳에서 결과를 받아보실 수 있습니다.</string>
 
 </resources>
