--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
   -->
 
 <resources>
-    <string name="app_name">preshoes</string>
+    <string name="app_name">Preshoes</string>
     <string name="title_home">홈</string>
     <string name="title_diagnose">진단</string>
     <string name="title_report">결과</string>
