--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,7 @@
     <string name="notify_report_deleted">보고서가 삭제되었습니다.</string>
     <string name="fail_report_delete_failed">보고서를 삭제하지 못 하였습니다.</string>
     <string name="description_no_reports">보고서가 없습니다. 진단 후 이곳에서 결과를 받아보실 수 있습니다.</string>
+    <string name="notify_session_canceled">검사가 중단되었습니다.</string>
+    <string name="fail_session_cancel_error">검사를 중단하는 도중 오류가 발생하였습니다.</string>
 
 </resources>
