--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="fail_wrong_auth">이메일이나 비밀번호를 확인하여 주세요.</string>
     <string name="fail_server_connection">서버와의 연결에 실패하였습니다.</string>
     <string name="fail_unknown">알 수 없는 이유로 요청을 처리하는 데에 실패하였습니다.</string>
+    <string name="notify_press_again_to_exit">뒤로 가기를 한 번 더 누르면 앱이 종료됩니다.</string>
 
 </resources>
