--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="description_unified_diagnosis">정적 족저압 검사와 짧은 걷기로 이루어진 검사입니다. 양 발 무게 균형, 보행 시 발 각도 등 다양한 특징을 진단할 수 있습니다.</string>
     <string name="description_horizontal_bias">양 발 중심 편향</string>
     <string name="description_score">바른 걸음걸이</string>
-    <string name="description_walks">걸음</string>
+    <string name="description_walks">걸음 수</string>
     <string name="description_logo_image">로고 이미지</string>
     <string name="title_details">상세 보기</string>
     <string name="title_horizontal_bias_variation">수평 무게 중심 변화</string>
