--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,6 @@
     <string name="disease_name_2">고관절염(Arthritis of the hip joint)</string>
     <string name="disease_name_3">연골연화증(Chondromalacia)</string>
     <string name="disease_name_4">관절염(Arthritis)</string>
-    <string name="disease_name_0">개발자가정신이없군요</string>
+    <string name="disease_name_0">구웃~! 멋있드아앙</string>
 
 </resources>
